// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageForm component agentTyping shows typing indicator 1`] = `
<div
  className="MessageForm"
  style={
    Object {
      "boxShadow": "0 1px 2px 0 rgba(0, 0, 0, 0.2)",
      "zIndex": 1,
    }
  }
>
  <div
    className="poke"
  >
    <div
      className="pokeBody"
    >
      <span
        style={
          Object {
            "fontFamily": "Lato, sans-serif",
          }
        }
      >
        Agent is typing
      </span>
      <TypingIndicator
        xScale={0.75}
        yScale={0.5}
      />
    </div>
  </div>
  <div
    className="messageArea"
  >
    <TextareaAutosize
      disabled={false}
      inputRef={[Function]}
      maxLength={1024}
      maxRows={6}
      minRows={1}
      name="message"
      onChange={[Function]}
      onHeightChange={[Function]}
      onInput={[Function]}
      onKeyDown={[Function]}
      placeholder="Send us a message..."
      style={
        Object {
          "color": "#68b588",
          "fontFamily": "Source Sans Pro",
        }
      }
      useCacheForDOMMeasurements={false}
      value=""
    />
    <button
      className="sendBtn"
      disabled={true}
      onClick={[Function]}
      style={
        Object {
          "color": "#68b588",
          "fontFamily": "Source Sans Pro",
          "fontSize": 16,
          "opacity": ".5",
          "textTransform": "uppercase",
        }
      }
    >
      Send
    </button>
  </div>
</div>
`;

exports[`MessageForm component rendering renders 1`] = `
<div
  className="MessageForm"
  style={
    Object {
      "boxShadow": "0 1px 2px 0 rgba(0, 0, 0, 0.2)",
      "zIndex": 1,
    }
  }
>
  <div
    className="messageArea"
  >
    <TextareaAutosize
      disabled={false}
      inputRef={[Function]}
      maxLength={1024}
      maxRows={6}
      minRows={1}
      name="message"
      onChange={[Function]}
      onHeightChange={[Function]}
      onInput={[Function]}
      onKeyDown={[Function]}
      placeholder="Send us a message..."
      style={
        Object {
          "color": "#68b588",
          "fontFamily": "Source Sans Pro",
        }
      }
      useCacheForDOMMeasurements={false}
      value=""
    />
    <button
      className="sendBtn"
      disabled={true}
      onClick={[Function]}
      style={
        Object {
          "color": "#68b588",
          "fontFamily": "Source Sans Pro",
          "fontSize": 16,
          "opacity": ".5",
          "textTransform": "uppercase",
        }
      }
    >
      Send
    </button>
  </div>
</div>
`;
